# python-tricks

./: .gitignore  .tool-versions  Extras.md  README.md  TODOS.md  character-encoding.py  decorators.py  exceptions.py  generators.py  logger.py  memoization.py  pyproject.toml  steps.md  type-hints.py  utils.py
text-files/: sample.txt
