[tool.poetry]
name = "python-tricks"
version = "0.1.0"
description = "Python-tricks based on Sebastian Mathot videos"
authors = ["adimyth <mishraaditya6991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
flake8 = "^3.8.3"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
